--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
         <h2 class="section-title">123</h2>
         <ul class="list">
           <li class="second-section-li black-color">
-            <h3 class="">Strategy</h3>
+            <h3 class="section-title-sub">Strategy</h3>
             <p class="section-p features-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="second-section-li black-color">
-            <h3 class="">Punctuality</h3>
+            <h3 class="section-title-sub">Punctuality</h3>
             <p class="section-p features-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="second-section-li black-color">
-            <h3 class="">Diligence</h3>
+            <h3 class="section-title-sub">Diligence</h3>
             <p class="section-p features-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="second-section-li black-color">
-            <h3 class="">Technologies</h3>
+            <h3 class="section-title-sub">Technologies</h3>
             <p class="section-p features-paragraph">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -107,7 +107,7 @@
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
-            <h3 class="">Mark Guerrero</h3>
+            <h3 class="section-title-sub">Mark Guerrero</h3>
             <p class="section-p about-team-paragraph">Product Designer</p>
             <img
               src="./images/team1.jpg"
@@ -117,7 +117,7 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="">Tom Ford</h3>
+            <h3 class="section-title-sub">Tom Ford</h3>
             <p class="section-p about-team-paragraph">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
@@ -127,7 +127,7 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="">Camila Garcia</h3>
+            <h3 class="section-title-sub">Camila Garcia</h3>
             <p class="section-p about-team-paragraph">Marketing</p>
             <img
               src="./images/team3.jpg"
@@ -137,7 +137,7 @@
             />
           </li>
           <li class="forth-section-li">
-            <h3 class="">Daniel Wilson</h3>
+            <h3 class="section-title-sub">Daniel Wilson</h3>
             <p class="section-p features-paragraph">UI Designer</p>
             <img
               src="./images/team4.jpg"
