--- a/index.html
+++ b/index.html
@@ -5,80 +5,79 @@
     <meta
       name="description"
       content="Effective Solutions
-    for Your Business"
-    />
+    for Your Business" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <title>Webstudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo link blue-color"
-          >Web<span class="black-color">Studio</span></a
-        >
+        <a href="./index.html" class="logo link blue-color">Web<span
+            class="black-color">Studio</span></a>
         <ul class="list">
-          <li class="nav-li-first ">
+          <li class="nav-li">
             <a href="./index.html" class="link black-color">Studio</a>
           </li>
-          <li class="nav-li-first ">
+          <li class="nav-li">
             <a href="./portfolio.html" class="link black-color">Portfolio</a>
           </li>
-          <li class="nav-li-first "><a href="" class="link black-color">Contacts</a></li>
+          <li class="nav-li">
+            <a href class="link black-color">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link address-link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+110001111111" class="link address-link">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" class="link address-link">+11 (000)
+              111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
       <section class="hero">
-        <h1 class="section-primary-title">Effective Solutions for Your Business</h1>
+        <h1 class="section-primary-title">
+          Effective Solutions for Your Business
+        </h1>
         <button type="button" class="first-section-button">
           Order Service
         </button>
       </section>
-      
-      <section class="features">
 
+      <section class="features">
         <h2 class="section-title">123</h2>
         <ul class="list">
-          <li class="second-section-li ">
+          <li class="second-section-li">
             <h3 class="section-title-sub">Strategy</h3>
             <p class="section-paragraph">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="second-section-li ">
+          <li class="second-section-li">
             <h3 class="section-title-sub">Punctuality</h3>
             <p class="section-paragraph">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="second-section-li ">
+          <li class="second-section-li">
             <h3 class="section-title-sub">Diligence</h3>
             <p class="section-paragraph">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="second-section-li ">
+          <li class="second-section-li">
             <h3 class="section-title-sub">Technologies</h3>
             <p class="section-paragraph">
               Design practice focused on digital experiences. We bring forth a
@@ -113,8 +112,7 @@
               src="./images/team1.jpg"
               alt="team1"
               width="264"
-              height="380"
-            />
+              height="380" />
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Tom Ford</h3>
@@ -123,8 +121,7 @@
               src="./images/team2.jpg"
               alt="team2"
               width="264"
-              height="380"
-            />
+              height="380" />
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Camila Garcia</h3>
@@ -133,8 +130,7 @@
               src="./images/team3.jpg"
               alt="team3"
               width="264"
-              height="380"
-            />
+              height="380" />
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Daniel Wilson</h3>
@@ -143,16 +139,14 @@
               src="./images/team4.jpg"
               alt="team4"
               width="264"
-              height="380"
-            />
+              height="380" />
           </li>
         </ul>
       </section>
     </main>
-    <footer class="">
-      <a href="./index.html" class="logo link blue-color"
-        >Web<span class="logo-span-footer">Studio</span></a
-      >
+    <footer class>
+      <a href="./index.html" class="logo link blue-color">Web<span
+          class="logo-span-footer">Studio</span></a>
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
@@ -160,4 +154,3 @@
     </footer>
   </body>
 </html>
-  
