--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta
       name="description"
       content="Effective Solutions
-    for Your Business" />
+    for Your Business"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet" />
+      rel="stylesheet"
+    />
     <title>Webstudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav class="nav">
-        <a href="./index.html" class="logo link blue-color">Web<span
-            class="black-color">Studio</span></a>
+        <a href="./index.html" class="logo link blue-color"
+          >Web<span class="black-color">Studio</span></a
+        >
         <ul class="list">
           <li class="nav-li">
             <a href="./index.html" class="link black-color">Studio</a>
@@ -34,11 +37,14 @@
       <address class="address">
         <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link address-link"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111" class="link address-link">+11 (000)
-              111-11-11</a>
+            <a href="tel:+110001111111" class="link address-link"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
@@ -112,7 +118,8 @@
               src="./images/team1.jpg"
               alt="team1"
               width="264"
-              height="380" />
+              height="380"
+            />
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Tom Ford</h3>
@@ -121,7 +128,8 @@
               src="./images/team2.jpg"
               alt="team2"
               width="264"
-              height="380" />
+              height="380"
+            />
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Camila Garcia</h3>
@@ -130,7 +138,8 @@
               src="./images/team3.jpg"
               alt="team3"
               width="264"
-              height="380" />
+              height="380"
+            />
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Daniel Wilson</h3>
@@ -139,14 +148,16 @@
               src="./images/team4.jpg"
               alt="team4"
               width="264"
-              height="380" />
+              height="380"
+            />
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer-items">
-      <a href="./index.html" class="logo link blue-color">Web<span
-          class="logo-span-footer">Studio</span></a>
+      <a href="./index.html" class="logo link blue-color"
+        >Web<span class="logo-span-footer">Studio</span></a
+      >
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
