--- a/portfolio.html
+++ b/portfolio.html
@@ -15,24 +15,32 @@
 <body>
   <header>
     <nav class="nav">
-      <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+      <a href="./index.html" class="logo link blue-color"
+        >Web<span class="black-color">Studio</span></a
+      >
       <ul class="list">
-        <li class="nav-li-first">
-          <a href="./index.html" class="link">Studio</a>
+        <li class="nav-li">
+          <a href="./index.html" class="link black-color">Studio</a>
         </li>
-        <li class="nav-li-first">
-          <a href="./portfolio.html" class="link">Portfolio</a>
+        <li class="nav-li">
+          <a href="./portfolio.html" class="link black-color">Portfolio</a>
         </li>
-        <li class="nav-li-first"><a href class="link">Contacts</a></li>
+        <li class="nav-li">
+          <a href class="link black-color">Contacts</a>
+        </li>
       </ul>
     </nav>
     <address class="address">
       <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com" class="link address-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link address-link"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-          <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="link address-link"
+            >+11 (000) 111-11-11</a
+          >
         </li>
       </ul>
     </address>
@@ -71,62 +79,64 @@
         <li>
           <a href class="link"><img src="./images/img4.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Banking App Interface Concept</h2>
-            <p class="section-p">App</p></a>
+            <h2 class="section-title-sub">Banking App Interface Concept</h2>
+            <p class="section-paragraph">App</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img5.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Cashless Payment</h2>
-            <p class="section-p">Marketing</p></a>
+            <h2 class="section-title-sub">Cashless Payment</h2>
+            <p class="section-paragraph">Marketing</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img6.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Meditation App</h2>
-            <p class="section-p">App</p></a>
+            <h2 class="section-title-sub">Meditation App</h2>
+            <p class="section-paragraph">App</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img7.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Taxi Service</h2>
-            <p class="section-p">Marketing</p></a>
+            <h2 class="section-title-sub">Taxi Service</h2>
+            <p class="section-paragraph">Marketing</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img8.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Screen Illustrations</h2>
-            <p class="section-p">Design</p></a>
+            <h2 class="section-title-sub">Screen Illustrations</h2>
+            <p class="section-paragraph">Design</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img9.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Online Courses</h2>
-            <p class="section-p">Marketing</p></a>
+            <h2 class="section-title-sub">Online Courses</h2>
+            <p class="section-paragraph">Marketing</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img10.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Instagram Stories Concept</h2>
-            <p class="section-p">Design</p></a>
+            <h2 class="section-title-sub">Instagram Stories Concept</h2>
+            <p class="section-paragraph">Design</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img11.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Organic Food</h2>
-            <p class="section-p">Web Site</p></a>
+            <h2 class="section-title-sub">Organic Food</h2>
+            <p class="section-paragraph">Web Site</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img12.jpg" alt="img"
               width="360" height="300" />
-            <h2 class="section-h">Fresh Coffee</h2>
-            <p class="section-p">Web Site</p></a>
+            <h2 class="section-title-sub">Fresh Coffee</h2>
+            <p class="section-paragraph">Web Site</p></a>
         </li>
       </ul>
     </section>
   </main>
-  <footer class="footer">
-    <a href="./index.html" class="logo link">Web<span class="logo-span">Studio</span></a>
+  <footer class="footer-items">
+    <a href="./index.html" class="logo link blue-color"
+      >Web<span class="logo-span-footer">Studio</span></a
+    >
     <p class="footer-p">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
