--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta
       name="description"
       content="Effective Solutions
     for Your Business"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
-    />
+    >
     <title>Webstudio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
     <header>
@@ -30,7 +30,7 @@
             <a href="./portfolio.html" class="link black-color">Portfolio</a>
           </li>
           <li class="nav-li">
-            <a href class="link black-color">Contacts</a>
+            <a href="" class="link black-color">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -97,13 +97,13 @@
         <h2 class="section-title">What are we doing</h2>
         <ul class="list">
           <li>
-            <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
+            <img src="./images/img1.jpg" alt="img1" width="360" height="300">
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="img2" width="360" height="300" />
+            <img src="./images/img2.jpg" alt="img2" width="360" height="300">
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="img3" width="360" height="300" />
+            <img src="./images/img3.jpg" alt="img3" width="360" height="300">
           </li>
         </ul>
       </section>
@@ -119,7 +119,7 @@
               alt="team1"
               width="264"
               height="380"
-            />
+            >
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Tom Ford</h3>
@@ -129,7 +129,7 @@
               alt="team2"
               width="264"
               height="380"
-            />
+            >
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Camila Garcia</h3>
@@ -139,7 +139,7 @@
               alt="team3"
               width="264"
               height="380"
-            />
+            >
           </li>
           <li class="forth-section-li">
             <h3 class="section-title-sub">Daniel Wilson</h3>
@@ -149,7 +149,7 @@
               alt="team4"
               width="264"
               height="380"
-            />
+            >
           </li>
         </ul>
       </section>
