--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,16 @@
 <head>
-  <meta charset="utf-8" />
+  <meta charset="utf-8">
   <meta
     name="description"
     content="Effective Solutions
-  for Your Business" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  for Your Business">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet" />
+    rel="stylesheet">
   <title>Webstudio</title>
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
@@ -78,55 +78,55 @@
       <ul class="list">
         <li>
           <a href class="link"><img src="./images/img4.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Banking App Interface Concept</h2>
             <p class="section-paragraph">App</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img5.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Cashless Payment</h2>
             <p class="section-paragraph">Marketing</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img6.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Meditation App</h2>
             <p class="section-paragraph">App</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img7.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Taxi Service</h2>
             <p class="section-paragraph">Marketing</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img8.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Screen Illustrations</h2>
             <p class="section-paragraph">Design</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img9.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Online Courses</h2>
             <p class="section-paragraph">Marketing</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img10.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Instagram Stories Concept</h2>
             <p class="section-paragraph">Design</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img11.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Organic Food</h2>
             <p class="section-paragraph">Web Site</p></a>
         </li>
         <li>
           <a href class="link"><img src="./images/img12.jpg" alt="img"
-              width="360" height="300" />
+              width="360" height="300">
             <h2 class="section-title-sub">Fresh Coffee</h2>
             <p class="section-paragraph">Web Site</p></a>
         </li>
