--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li class="forth-section-li">
-            <h3 class="section-title-sub">Mark Guerrero</h3>
+            <h3 class="title-team">Mark Guerrero</h3>
             <p class="section-paragraph">Product Designer</p>
             <img
               src="./images/team1.jpg"
@@ -122,7 +122,7 @@
             >
           </li>
           <li class="forth-section-li">
-            <h3 class="section-title-sub">Tom Ford</h3>
+            <h3 class="title-team">Tom Ford</h3>
             <p class="section-paragraph">Frontend Developer</p>
             <img
               src="./images/team2.jpg"
@@ -132,7 +132,7 @@
             >
           </li>
           <li class="forth-section-li">
-            <h3 class="section-title-sub">Camila Garcia</h3>
+            <h3 class="title-team">Camila Garcia</h3>
             <p class="section-paragraph">Marketing</p>
             <img
               src="./images/team3.jpg"
@@ -142,7 +142,7 @@
             >
           </li>
           <li class="forth-section-li">
-            <h3 class="section-title-sub">Daniel Wilson</h3>
+            <h3 class="title-team">Daniel Wilson</h3>
             <p class="section-paragraph">UI Designer</p>
             <img
               src="./images/team4.jpg"
