--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="./index.html" class="link black-color">Studio</a>
           </li>
           <li class="nav-li">
-            <a href="./portfolio.html" class="link black-color">Portfolio</a>
+            <a href="" class="link black-color">Portfolio</a>
           </li>
           <li class="nav-li">
             <a href="" class="link black-color">Contacts</a>
@@ -92,22 +92,6 @@
           </li>
         </ul>
       </section>
-
-      <section>
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/img1.jpg" alt="img1" width="360" height="300">
-          </li>
-          <li>
-            <img src="./images/img2.jpg" alt="img2" width="360" height="300">
-          </li>
-          <li>
-            <img src="./images/img3.jpg" alt="img3" width="360" height="300">
-          </li>
-        </ul>
-      </section>
-
       <section class="about-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
@@ -157,6 +141,43 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="list">
+          <li>
+            <img src="./images/img1.jpg" alt="img1" width="360" height="300">
+            <h3 class="">Banking App</h3>
+            <p class="">App</p>
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="img2" width="360" height="300">
+            <h3 class="">Cashless Payment</h3>
+            <p class="">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="img3" width="360" height="300">
+            <h3 class="">Meditation App</h3>
+            <p class="">App</p>
+          </li>
+          <li>
+            <img src="./images/img4.jpg" alt="img3" width="360" height="300">
+            <h3 class="">Taxi Service</h3>
+            <p class="">Marketing</p>
+          </li>
+          <li>
+            <img src="./images/img5.jpg" alt="img3" width="360" height="300">
+            <h3 class="">Screen Illustrations</h3>
+            <p class="">Design</p>
+          </li>
+          <li>
+            <img src="./images/img6.jpg" alt="img3" width="360" height="300">
+            <h3 class="">Online Courses</h3>
+            <p class="">Marketing</p>
+          </li>
+        </ul>
+      </section>
+
+      
     </main>
     <footer class="footer-items">
       <a href="./index.html" class="logo link blue-color"
